初步完成标签服务的重构